--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,11 @@
 {
-    "display_name": "TTS",
+    "display_name": "TTS WebUI Adapter",
     "loading_order": 10,
     "requires": [],
-    "optional": [
-        "silero-tts",
-        "edge-tts",
-        "coqui-tts"
-    ],
+    "optional": [],
     "js": "index.js",
     "css": "style.css",
-    "author": "Ouoertheo#7264",
+    "author": "Ouoertheo#7264, rsxdalv",
     "version": "1.0.0",
     "homePage": "None"
 }
